objects/CCMS_Need_Releases__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCMS_DB_Id__c</fullName>
        <externalId>true</externalId>
        <label>CCMS DB Id</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CCMS_Family__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CCMS Family</label>
        <referenceTo>CCMS_Family__c</referenceTo>
        <relationshipLabel>CCMS Need Releases</relationshipLabel>
        <relationshipName>CCMS_Need_Releases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CCMS_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CCMS Product</label>
        <referenceTo>CCMS_Product__c</referenceTo>
        <relationshipName>CCMS_NEED_RELEASES</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <externalId>true</externalId>
        <label>Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>CCMS Need Releases</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CCMS_Product__c</columns>
        <columns>Active__c</columns>
        <columns>Name__c</columns>
        <columns>CCMS_Family__c</columns>
        <columns>CCMS_DB_Id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Name__c</field>
            <operation>equals</operation>
            <value>ICADV12.2.500.1</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>CCMS Need Releases Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CCMS Need Releases</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>